# ACM-SUMMER-SCHOOL-KARE

./: LICENSE  best_short_term_model.pth  pyproject.toml
Arduino/Blink_with_Buzzer/: Blink_with_Buzzer.ino
Arduino/Exp1_IR_with_Buzzer/: Exp1_IR_with_Buzzer.ino
Arduino/Exp1_IR_with_Buzzer_only_once/: Exp1_IR_with_Buzzer_only_once.ino
Arduino/Exp1_IR_with_Buzzer_only_once_count/: Exp1_IR_with_Buzzer_only_once_count.ino
Arduino/Exp1_IR_with_Buzzer_only_once_count_servo/: Exp1_IR_with_Buzzer_only_once_count_servo.ino
Arduino/Exp1_ultra_sonic/: Exp1_ultra_sonic.ino
Arduino/Exp3_bluetooth_eight_LEDs/: Exp3_bluetooth_eight_LEDs.ino
Arduino/Exp3_bluetooth_eight_leds_mutiple/: Exp3_bluetooth_eight_leds_mutiple.ino
Arduino/Exp3_bluetooth_eight_leds_voice/: Exp3_bluetooth_eight_leds_voice.ino
Arduino/Final_Working_RGB_IR/: Final_Working_RGB_IR.ino
Arduino/HandGuesture_LtoR_IR/: HandGuesture_LtoR_IR.ino
Arduino/IR_Test/: IR_Test.ino
Arduino/LDR_realy/: LDR_realy.ino
Arduino/LED_IR/: LED_IR.ino
Arduino/PIR_human_vs_robot/: PIR_human_vs_robot.ino
Arduino/SIMPLE_LED_BLINK/: SIMPLE_LED_BLINK.ino
Arduino/SOS/: SOS.ino
Arduino/SOS_button/: SOS_button.ino
Arduino/bluetooth_annimation/: bluetooth_annimation.ino
Arduino/bluetooth_leds/: bluetooth_leds.ino
Arduino/bluetooth_police/: bluetooth_police.ino
Arduino/gps/: gps.ino
Arduino/gsm_900a/: gsm_900a.ino
CoAP/: controller.py
Docker Setup/: install_docker.sh
llmcode/: L_2_1_tokenizer.ipynb  L_2_2_llm_intro.ipynb  L_3_1_data_types.ipynb  L_3_1_quantization.ipynb  L_4_1_funetune.ipynb
(+45 files in other folders)
