[project]
name = "acm-summer-school-kare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiocoap>=0.4.14",
    "joblib>=1.5.1",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.0",
    "numpy>=2.3.1",
    "optuna>=4.4.0",
    "paho-mqtt>=2.1.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]

